# RiverSignal

./: .gcloudignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  medallion_views.sql  playwright.config.ts  pyproject.toml
.ddx/: beads.jsonl  config.yaml  versions.yaml
alembic/: env.py
app/: audio_cache.py  image_cache.py  main.py
docs/: data-licensing-compliance.md  deeptrail-screenflow-v2.md  deeptrail-screenflow.md  deployment-options.md  green-river-utah-data-sources.md  remaining-riverpath-ai-features.md
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
mockups/: alerts-option1-minimal.html  alerts-option2-cards.html  alerts-option3-sidebar.html
pipeline/: backfill_inat.py  backfill_photos.py  cache_images.py  cli.py  crontab  db.py  generate_river_stories.py  generate_river_story_audio.py  medallion.py  medallion_ddl.py  seed_fly_tying_videos.py  seed_hatch_chart.py  tools.py
scripts/: backup-db.sh  deploy-pipeline.sh  migrate-to-production.sh  restore-production.sh
seed/: RiverSignal.rtf  green_river_curated.py  rockhounding_sites.py
terraform/: artifact_registry.tf  cloud_build.tf  cloud_run.tf  cloud_run_jobs.tf  cloud_scheduler.tf  cloud_sql.tf  cloud_storage.tf  iam.tf  main.tf  networking.tf  notifications.tf  outputs.tf  secrets.tf  terraform.tfvars.example  variables.tf
tests/: admin-splash.spec.ts  bottom-nav-routes.spec.ts  conftest.py  path-now-blank-recovery.spec.ts  riverpath-fixes.spec.ts  riverpath-mvp.spec.ts  riverpath-story-scroll.spec.ts  species-map.spec.ts  (+19 more)
(+527 files in other folders)
