[project]
name = "riversignal-platform"
version = "0.1.0"
description = "RiverSignal data ingestion and watershed intelligence platform"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "geoalchemy2>=0.15",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "click>=8.1",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "rasterio>=1.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "anthropic>=0.52",
    "pydantic>=2.10",
    "python-jose[cryptography]>=3.3",
    "scikit-learn>=1.5",
    "numpy>=1.26",
]

[project.scripts]
riversignal = "pipeline.cli:main"

[tool.setuptools.packages.find]
include = ["pipeline*", "app*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
